Added forbidden pages in case of insufficient role and included initial-data with h2

--- a/gs-securing-web/src/main/resources/public/css/app.css
+++ b/gs-securing-web/src/main/resources/public/css/app.css
@@ -41,6 +41,9 @@ a {
     padding: 6px;
     margin: auto;
 }
+.leftAlign {
+    text-align: left
+}
 .submitButton {
     background-color: #4CAF50;
     font-size: 20px;
