--- a/gs-securing-web/src/main/resources/templates/registration.html
+++ b/gs-securing-web/src/main/resources/templates/registration.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" >
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" th:href="@{/css/app.css}" href="../public/css/app.css"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../public/css/app.css" rel="stylesheet" th:href="@{/css/app.css}"/>
     <title>User Registration</title>
 </head>
 
 <body>
-<form action="#" th:action="@{/register}" enctype="utf8" method="POST" th:object="${user}">
+<form action="#" enctype="utf8" method="POST" th:action="@{/register}" th:object="${user}">
     <div class="container">
         <h1 th:text="#{label.form.heading.register}">form</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
-        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errorMsg">
+        <div class="alert alert-danger errorMsg" th:if="${#fields.hasAnyErrors()}">
             <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Validation error</p>
         </div>
-        <table class="registrationTable" align="center">
+        <table align="center" class="registrationTable">
             <tbody>
-                <tr>
-                    <td class="labelTd"><strong><label th:text="#{label.user.firstName}">First Name</label></strong></td>
-                    <td> <input th:field="*{firstName}" placeholder="First Name"/></td>
-                </tr>
-                <tr>
-                    <td class="labelTd"><strong><label th:text="#{label.user.lastName}">Last Name</label></strong></td>
-                    <td>  <input th:field="*{lastName}" placeholder="Last Name"/></td>
-                </tr>
-                <tr>
-                    <td class="labelTd"><strong> <label th:text="#{label.user.email}">Email</label></strong></td>
-                    <td> <input th:field="*{email}" type="email" placeholder="Email Address"/></td>
-                </tr>
-                <tr>
-                    <td class="labelTd"><strong><label th:text="#{label.user.password}">Password</label></strong></td>
-                    <td><input th:field="*{password}" type="password" placeholder="Password"/></td>
-                </tr>
-                <tr>
-                    <td class="labelTd"><strong><label th:text="#{label.user.confirmPass}">Confirm Password</label></strong></td>
-                    <td><input th:field="*{matchingPassword}" type="password" placeholder="Confirm Password"/></td>
-                </tr>
+            <tr>
+                <td class="labelTd"><strong><label th:text="#{label.user.firstName}">First Name</label></strong></td>
+                <td><input placeholder="First Name" th:field="*{firstName}"/></td>
+            </tr>
+            <tr>
+                <td class="labelTd"><strong><label th:text="#{label.user.lastName}">Last Name</label></strong></td>
+                <td><input placeholder="Last Name" th:field="*{lastName}"/></td>
+            </tr>
+            <tr>
+                <td class="labelTd"><strong> <label th:text="#{label.user.email}">Email</label></strong></td>
+                <td><input placeholder="Email Address" th:field="*{email}" type="email"/></td>
+            </tr>
+            <tr>
+                <td class="labelTd"><strong><label th:text="#{label.user.password}">Password</label></strong></td>
+                <td><input placeholder="Password" th:field="*{password}" type="password"/></td>
+            </tr>
+            <tr>
+                <td class="labelTd"><strong><label th:text="#{label.user.confirmPass}">Confirm Password</label></strong>
+                </td>
+                <td><input placeholder="Confirm Password" th:field="*{matchingPassword}" type="password"/></td>
+            </tr>
             </tbody>
         </table>
         <hr>
