--- a/gs-securing-web/src/main/resources/templates/login.html
+++ b/gs-securing-web/src/main/resources/templates/login.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" >
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" th:href="@{/css/app.css}" href="../public/css/app.css"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../public/css/app.css" rel="stylesheet" th:href="@{/css/app.css}"/>
     <title>Login</title>
 </head>
 
 <body>
-<form action="#" th:action="@{/login}" enctype="utf8" method="POST">
+<form action="#" enctype="utf8" method="POST" th:action="@{/login}">
     <div class="container">
         <h1 th:text="#{label.form.heading.login}">Login</h1>
         <hr>
-        <div th:if="${param.error}" class="alert alert-danger errorMsg">
+        <div class="alert alert-danger errorMsg" th:if="${param.error}">
             Invalid username and password
         </div>
-        <div th:if="${param.logout}" class="alert alert-danger errorMsg">
-            Invalid username and password
-        </div>
-        <table class="loginTable" align="center">
+        <table align="center" class="loginTable">
             <tbody>
             <tr>
                 <td class="labelTd"><strong> <label th:text="#{label.user.email}">Email</label></strong></td>
-                <td> <input name="username" type="email" placeholder="Email Address"/></td>
+                <td><input name="username" placeholder="Email Address" type="email"/></td>
             </tr>
             <tr>
                 <td class="labelTd"><strong><label th:text="#{label.user.password}">Password</label></strong></td>
-                <td><input name="password" type="password" placeholder="Password"/></td>
+                <td><input name="password" placeholder="Password" type="password"/></td>
             </tr>
             </tbody>
         </table>
