--- a/gs-securing-web/src/main/resources/templates/accessDenied.html
+++ b/gs-securing-web/src/main/resources/templates/accessDenied.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container main">
         <h1 th:text="#{label.heading.accessDenied}" class="leftAlign">Access Denied</h1>
         <hr />
         <p th:text="#{label.text.accessDenied}" class="leftAlign">Trying to access a protected resource</p>
