--- a/gs-securing-web/src/main/resources/templates/login.html
+++ b/gs-securing-web/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 
 <body>
 <form action="#" enctype="utf8" method="POST" th:action="@{/login}">
-    <div class="container">
+    <div class="container main">
         <h1 th:text="#{label.form.heading.login}">Login</h1>
         <hr>
         <div class="alert alert-danger errorMsg" th:if="${param.error}">
