--- a/gs-securing-web/src/main/resources/templates/registration.html
+++ b/gs-securing-web/src/main/resources/templates/registration.html
@@ -11,7 +11,7 @@
 
 <body>
 <form action="#" enctype="utf8" method="POST" th:action="@{/register}" th:object="${user}">
-    <div class="container">
+    <div class="container main">
         <h1 th:text="#{label.form.heading.register}">form</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
