Added admin console screen for admin users; Added drop-down for user-role during registration

--- a/gs-securing-web/src/main/resources/public/css/app.css
+++ b/gs-securing-web/src/main/resources/public/css/app.css
@@ -26,6 +26,15 @@ body {
     padding: 8px;
     width: 200px;
 }
+.usersTable {
+    border-collapse: collapse;
+    width: 75%
+}
+.usersTable th, .usersTable td {
+     text-align: left;
+     padding: 8px;
+     border: 1px solid black;
+}
 input {
     padding-left: 8px;
     width: 280px;
