--- a/angular-spring-boot/src/app/module/user/user-list/user-list.component.html
+++ b/angular-spring-boot/src/app/module/user/user-list/user-list.component.html
@@ -3,16 +3,18 @@
     <table class="table table-bordered table-striped">
       <thead class="thead-dark">
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
           <th scope="col">Email</th>
+          <th scope="col">Role</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let user of users">
-          <td>{{ user.id }}</td>
-          <td>{{ user.name }}</td>
-          <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
+          <td>{{ user.firstName }}</td>
+          <td>{{ user.lastName }}</td>
+          <td><a href="#">{{ user.email }}</a></td>
+          <td>{{ user.role }}</td>
         </tr>
       </tbody>
     </table>
