Fix page-redirection not happening on logout of user

--- a/angular-spring-boot/src/app/app.component.html
+++ b/angular-spring-boot/src/app/app.component.html
@@ -15,7 +15,7 @@
               <a routerLink="/users" class="btn btn-info">List Users</a>
             </li>
             <li class="list-inline-item">
-              <a routerLink="/adduser" class="btn btn-info">Add User</a>
+              <a routerLink="/user/add" class="btn btn-info">Add User</a>
             </li>
             <li [hidden]="isAuthenticated" class="list-inline-item">
               <a routerLink="/login" class="btn btn-info">Login</a>
