--- a/angular-spring-boot/src/app/app.component.html
+++ b/angular-spring-boot/src/app/app.component.html
@@ -1,9 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -12,16 +7,16 @@
           <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
-              <a routerLink="/users" class="btn btn-info">List Users</a>
+              <a routerLink="/home" class="btn btn-info">Home</a>
             </li>
             <li class="list-inline-item">
-              <a routerLink="/user/add" class="btn btn-info">Add User</a>
+              <a routerLink="/user" class="btn btn-info">Users</a>
             </li>
             <li [hidden]="isAuthenticated" class="list-inline-item">
               <a routerLink="/login" class="btn btn-info">Login</a>
             </li>
             <li [hidden]="!isAuthenticated" class="list-inline-item">
-              <a (click)="logout()" class="btn btn-info">Logout</a>
+              <a href="#" (click)="logout()" class="btn btn-info">Logout</a>
             </li>
           </ul>
         </div>
