--- a/angular-spring-boot/src/app/user/user-form/user-form.component.html
+++ b/angular-spring-boot/src/app/user/user-form/user-form.component.html
@@ -1,4 +1,4 @@
-<div class="card my-5">
+<div class="card">
   <div class="card-body">
     <form autocomplete="off" name="userForm" (ngSubmit)="onSubmit(userForm)" #userForm="ngForm" novalidate>
 
