--- a/angular-spring-boot/src/app/user/user-list/user-list.component.html
+++ b/angular-spring-boot/src/app/user/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<div class="card my-5">
+<div class="card">
   <div class="card-body">
     <table class="table table-bordered table-striped">
       <thead class="thead-dark">
