--- a/angular-spring-boot/src/app/user/user.component.html
+++ b/angular-spring-boot/src/app/user/user.component.html
@@ -1,9 +1,14 @@
-<ul class="text-center list-inline py-3">
-    <li class="list-inline-item">
-        <a routerLink="list" class="btn btn-info">List Users</a>
-    </li>
-    <li class="list-inline-item">
-        <a routerLink="add" class="btn btn-info">Add User</a>
-    </li>
-</ul>
+<div class="wrapper">
+    <!-- Sidebar -->
+    <nav id="sidebar">
+        <ul class="list-unstyled components">
+            <li>
+                <a routerLink="list" class="btn btn-info">List Users</a>
+            </li>
+            <li>
+                <a routerLink="add" class="btn btn-info">Add User</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 <router-outlet></router-outlet>
