--- a/angular-spring-boot/src/app/user/user.component.html
+++ b/angular-spring-boot/src/app/user/user.component.html
@@ -1,12 +1,11 @@
 <div class="wrapper">
-    <!-- Sidebar -->
     <nav id="sidebar">
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="list" class="btn btn-info">List Users</a>
+                <a routerLink="list" routerLinkActive="active" class="btn btn-info">List Users</a>
             </li>
             <li>
-                <a routerLink="add" class="btn btn-info">Add User</a>
+                <a routerLink="add" routerLinkActive="active" class="btn btn-info">Add User</a>
             </li>
         </ul>
     </nav>
