--- a/angular-spring-boot/src/app/user/user-form/user-form.component.html
+++ b/angular-spring-boot/src/app/user/user-form/user-form.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-  <div class="card-body">
+<div class="card align-items-center">
+  <div class="card-body w-75 p-3">
     <form autocomplete="off" name="userForm" (ngSubmit)="onSubmit(userForm)" #userForm="ngForm" novalidate>
 
       <div [hidden]="(!userForm.submitted || userForm.valid) && !response.error" class="alert alert-danger">
